# mops-financial-api

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  connection.py  models.py  repository.py
app/parsers/: __init__.py  arelle.py  ixbrl.py  linkbase.py  lxml_parser.py
app/routers/: analysis.py  disclosure.py  dividend.py  financial.py  insiders.py  revenue.py  xbrl.py
app/schemas/: analysis.py  disclosure.py  dividend.py  financial.py  revenue.py  simplified.py  xbrl.py
app/services/: cached_financial.py  chart.py  disclosure.py  dividend.py  financial.py  insiders.py  metrics.py  mops_client.py  mops_html_client.py  mops_xbrl_client.py  revenue.py  taxonomy_manager.py  xbrl_parser.py
app/utils/: __init__.py  numerics.py
docs/: API_REFERENCE.md
notes/additional-crawlers/feat/: CHANGELOG.md  CODE_REVIEW.md  DESIGN.md  IMPLEMENTATION_STEPS.md  REQUIREMENTS.md
notes/equity-statement/feat/: CHANGELOG.md  CODE_REVIEW.md  DESIGN.md  IMPLEMENTATION_STEPS.md  (+1 more)
scripts/: test_equity_caching.py  test_revenue_caching.py
scripts/migrations/: 002_create_monthly_revenue.sql  003_create_share_pledging.sql
tests/: test_accounting_equation.py  test_database.py  test_disclosure_service.py  test_dividend_service.py  test_equity_feature.py  test_insiders_service.py  test_integration.py  test_mops_html_client.py  test_numerics.py  test_revenue_service.py  test_xbrl_parser.py  test_xbrl_parser_behavior.py
(+35 files in other folders)
