[project]
name = "mops-financial-api"
version = "0.1.0"
description = "REST API for Taiwan MOPS financial reports with XBRL parsing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "arelle-release>=2.0.0",
    "matplotlib>=3.10.8",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]
