[project]
name = "mops-financial-api"
version = "0.1.0"
description = "REST API for Taiwan MOPS financial reports with XBRL parsing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "arelle-release>=2.0.0",
    "matplotlib>=3.10.8",
    "beautifulsoup4>=4.14.3",
    "pandas>=2.2.0",
    "lxml[html_clean]>=5.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Suppress Arelle internal deprecation warnings (not our code)
    "ignore:.*delimitedList.*:DeprecationWarning:arelle.*",
]
